@@ -2,8 +2,8 @@ adapt-parser==0.3.4
 aiohttp==3.6.2
 doit==0.31.1
 fuzzywuzzy[speedup]==0.17.0
-google-cloud-texttospeech==0.5.0
 google-cloud-speech==1.3.1
+google-cloud-texttospeech==0.5.0
 html5lib==1.0.1
 json5==0.7.0
 multidict==4.6.1
@@ -11,6 +11,7 @@ networkx>=2.0
 num2words==0.5.10
 openfst==1.6.9
 paho-mqtt==1.5.0
+precise-runner==0.3.1
 PyAudio==0.2.11
 pydash==4.7.6
 quart==0.6.15
